# xservice

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: a0437ebbabe9_initial.py
docs/: architecture.md  deployment_buda.md  development.md
scripts/: bootstrap_local.sh
src/xservice/: auth.py  cli.py  db.py  logging.py  main.py  models.py  schemas.py  settings.py
src/xservice/api/: dependencies.py  response_models.py
src/xservice/api/routes/: admin.py  health.py  playground.py  search.py  tweets.py  users.py
src/xservice/parsers/: __init__.py  base.py  search.py  tweets.py  users.py
src/xservice/providers/: __init__.py  base.py  contracts.py  exceptions.py  models.py  registry.py  session_pool.py  twitter_graphql.py
src/xservice/services/: control_plane.py
tests/: conftest.py  test_admin.py  test_cli.py  test_default_api_key.py  test_default_cookie_bootstrap.py  test_health.py  test_parsers.py  test_playground.py  test_provider_contracts.py  test_provider_retry.py  test_rate_limits.py  test_search_routes.py  test_session_pool.py  test_tweet_routes.py  test_user_routes.py
tests/providers/: test_twitter_graphql_plumbing.py
